HelloWorld/force-app/main/default/objects/Mail__c/fields/delivery_status__c.field-meta.xml
<CustomField>
    <fullName>delivery_status__c</fullName>
    <label>delivery status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>on the way</fullName>
            </value>
            <value>
                <fullName>delivered</fullName>
            </value>
            <value>
                <fullName>missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>