HelloWorld/force-app/main/default/objects/Mail__c/fields/insurance__c.field-meta.xml
<CustomField>
    <fullName>insurance__c</fullName>
    <description>if is more than 100 for payout, go to approval, more than 1000, need multi approval</description>
    <label>insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>