HelloWorld/force-app/main/default/objects/Mail__c/fields/Insurance_check__c.field-meta.xml
<CustomField>
    <fullName>Insurance_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance_check</label>
    <type>Checkbox</type>
</CustomField>