HelloWorld/force-app/main/default/objects/Mail__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <label>Width</label>
    <length>20</length>
    <type>Text</type>
</CustomField>