HelloWorld/force-app/main/default/objects/Mail__c/listViews/manager_Mail.listView-meta.xml
<ListView>
    <fullName>manager_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>manager</label>
    <queue>manager</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>